addition of lasso and ridge regressors

--- a/src/model.ipynb
+++ b/src/model.ipynb
@@ -2,16 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.linear_model import LinearRegression"
+    "from sklearn.linear_model import LinearRegression, Ridge, Lasso\n",
+    "from sklearn.model_selection import GridSearchCV"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,11 +36,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Ridge/Lasso Regression"
+    "def ridge_regression_model(X_train, X_test, y_train):\n",
+    "    \"\"\"\n",
+    "    Creates a ridge regression model.\n",
+    "    GridSearchCV is used to find the best alpha value for the model.\n",
+    "    Returns the model with the best alpha value and the predicted values\n",
+    "    \"\"\"\n",
+    "    # Initialize model\n",
+    "    model = Ridge(alpha=1.0)\n",
+    "    \n",
+    "    # Create param grid\n",
+    "    param_grid = {\n",
+    "        'alpha' : [0.1, 0.5, 1.0, 1.5, 10, 100]\n",
+    "    }\n",
+    "    \n",
+    "    # Initialize model with best alpha value\n",
+    "    best_model = GridSearchCV(model, param_grid=param_grid, cv=5, n_jobs=-1)\n",
+    "    \n",
+    "    # Fit data into model\n",
+    "    best_model.fit(X_train, y_train)\n",
+    "    \n",
+    "    # Predict y values\n",
+    "    y_train_pred = best_model.predict(X_train)\n",
+    "    y_test_pred = best_model.predict(X_test)\n",
+    "    \n",
+    "    return best_model, y_train_pred, y_test_pred\n",
+    "\n",
+    "def lasso_regression_model(X_train, X_test, y_train):\n",
+    "    \"\"\"\n",
+    "    Creates a lasso regression model.\n",
+    "    GridSearchCV is used to find the best alpha value for the model.\n",
+    "    Returns the lasso regression model and the predicted values.\n",
+    "    \"\"\"\n",
+    "    # Initialize model\n",
+    "    model = Lasso(alpha=1.0)\n",
+    "    \n",
+    "    # Create param grid\n",
+    "    param_grid = {\n",
+    "        'alpha' : [0.1, 0.5, 1.0, 1.5, 10, 100]\n",
+    "    }\n",
+    "    \n",
+    "    # Initialize model with best alpha value\n",
+    "    best_model = GridSearchCV(model, param_grid=param_grid, cv=5, n_jobs=-1)\n",
+    "    \n",
+    "    # Fit data into model\n",
+    "    best_model.fit(X_train, y_train)\n",
+    "    \n",
+    "    # Predict y values\n",
+    "    y_train_pred = best_model.predict(X_train)\n",
+    "    y_test_pred = best_model.predict(X_test)\n",
+    "    \n",
+    "    return best_model, y_train_pred, y_test_pred"
    ]
   },
   {
