--- a/src/model.ipynb
+++ b/src/model.ipynb
@@ -2,21 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.linear_model import LinearRegression, Ridge, Lasso\n",
-    "from sklearn.model_selection import GridSearchCV"
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.svm import SVR"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Linear Regression (Base Comparison)\n",
     "def linear_regression_model(X_train, X_test, y_train, y_test):\n",
     "    \"\"\"\n",
     "    Builds a linear regression model to predict gross income.\n",
@@ -36,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,25 +96,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Random Forests Regressor"
+    "def random_forest_regress_model(X_train, X_test, y_train):\n",
+    "    \"\"\"\n",
+    "    Creates a random forests regression model and returns the model along with the predicted values.\n",
+    "    GridSearchCV is used to find the best number of decision trees within the forest.\n",
+    "    \"\"\"\n",
+    "    # Initialize model\n",
+    "    model = RandomForestRegressor(n_estimators=100, random_state=42)\n",
+    "    \n",
+    "    # Create parameter grid\n",
+    "    param_grid = {\n",
+    "        'n_estimators' : [10, 50, 100, 150]\n",
+    "    }\n",
+    "    \n",
+    "    # Initialize gridsearch\n",
+    "    best_model = GridSearchCV(model, n_jobs=-1, param_grid=param_grid, cv=5)\n",
+    "    \n",
+    "    # Fit data into the best model\n",
+    "    best_model.fit(X_train, y_train)\n",
+    "    \n",
+    "    # Predict train and test values\n",
+    "    y_train_pred = best_model.predict(X_train)\n",
+    "    y_test_pred = best_model.predict(X_test)\n",
+    "    \n",
+    "    return best_model, y_train_pred, y_test_pred"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Support Vector Regressor"
+    "def support_vector_regressor_model(X_train, X_test, y_train):\n",
+    "    \"\"\"\n",
+    "    Creates a SVR model and returns the model and predicted y values.\n",
+    "    Uses GridSearchCV to find the best kernels to use for the model.\n",
+    "    \"\"\"\n",
+    "    # Initialize model\n",
+    "    model = SVR(kernel='linear')\n",
+    "    \n",
+    "    # Create parameter grid\n",
+    "    param_grid = {\n",
+    "        'kernel' : ['linear', 'poly', 'rbf', 'sigmoid']\n",
+    "    }\n",
+    "    \n",
+    "    # Create model with the best kernel\n",
+    "    best_model = GridSearchCV(model, cv=5, n_jobs=-1, param_grid=param_grid)\n",
+    "    \n",
+    "    # Fit data into the best model\n",
+    "    best_model.fit(X_train, y_train)\n",
+    "    \n",
+    "    # Predict y values\n",
+    "    y_train_pred = best_model.predict(X_train)\n",
+    "    y_test_pred = best_model.predict(X_test)\n",
+    "    \n",
+    "    return best_model, y_train_pred, y_test_pred"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
